--- a/src/pages/blog/2020-03-23-ciano.md
+++ b/src/pages/blog/2020-03-23-ciano.md
@@ -3,7 +3,7 @@ templateKey: blog-post
 title: ciano
 date: 2020-03-23T12:57:24.755Z
 description: dddqdwqwdqwdqwdqwdqwdqwdwq
-featuredpost: true
+featuredpost: false
 featuredimage: /img/products-grid2.jpg
 tags:
   - caffè
