Update Blog “2020-03-23-ciano”

--- a/src/pages/blog/2020-03-23-ciano.md
+++ b/src/pages/blog/2020-03-23-ciano.md
@@ -6,6 +6,7 @@ description: dddqdwqwdqwdqwdqwdqwdqwdwq
 featuredpost: false
 featuredimage: /img/products-grid2.jpg
 tags:
-  - caffè
+  - flavor
+  - tasting
 ---
 dqwdqwdqwdqwdqwdqwdqwdqwdqw
